Name:                press
Version:             0.1.0
Synopsis:            Text templating language
Description:         A text templating language similar to Jinja & Django Templates
Category:            
License:             GPL
License-File:        LICENSE
Author:              Brandon Bickford <bickfordb@gmail.com>
Maintainer:          bickfordb@gmail.com
Homepage:            http://github.com/bickfordb/Text.Press
Build-Type:          Simple
Cabal-Version:       >= 1.2

Library
  Build-Depends:     base, containers, mtl, parsec >= 3.0.0, json
  Exposed-Modules:   Text.Press.Render, Text.Press.Parser, Text.Press.Tags, Text.Press.Run, Text.Press.Types

